# photonics_gen

./: .gitignore  README.md  pyproject.toml  pytest.ini
cluster_scripts/: array_setoff.sh  orion_setoff.sh  run_train.sh  setoff.sh  unet_data_scaling.sh  unet_param_scaling_setoff.sh
other_exps/: gauss.yaml  gauss_sum_diffusion.py  guided_generation.py  image_diversity_selector.py  new_guide_gen.py
photo_gen/: __init__.py  inference.py  main.py
photo_gen/config/: config.yaml  hydra.yaml  inference.yaml  vae_comparison.yaml  wgan_comparison.yaml
photo_gen/config/evaluation/: base.yaml  config.yaml  debug.yaml  diffusion_data_scaling.yaml
photo_gen/config/evaluation/datasets/: diffusion_data_scaling.yaml
photo_gen/config/evaluation/fom/: debug.yaml  meep.yaml
photo_gen/config/evaluation/functions/: basic.yaml  complete.yaml  debug.yaml
photo_gen/config/inference/: standard_gan.yaml  unet.yaml  vae.yaml  wgan.yaml
photo_gen/config/model/: set_transfo.yaml  standard_gan.yaml  unet.yaml  unet_fast.yaml  vae.yaml  wgan.yaml
photo_gen/config/train/: standard_gan.yaml  unet.yaml  unet_fast.yaml  vae.yaml  wgan.yaml
photo_gen/evaluation/: compare_models.py  eval_utils.py  evaluation.py  meep_compute_fom.py  old.py
photo_gen/models/: ddpm_basic.py  modules.py  normflow.py  set_models.py  standard_gan.py  unet.py  unet_fast.py  vae.py  wgan.py
photo_gen/utils/: unet_utils.py  utils.py
tests/: test_evaluation.py  test_integration.py  test_unet_model.py  test_unet_padding.py
